fix overflow of nav bar

--- a/_sass/_media.sass
+++ b/_sass/_media.sass
@@ -48,6 +48,7 @@
 @media (max-width: 1000px)
     #left-sidebar
         width: 50px
+        overflow: hidden
     .right-sidebar-item
         width: 50px
     .nav-item
@@ -55,6 +56,7 @@
         text-align: center
         font-size: 0
         line-height: 0
+        overflow: hidden
     .nav-section
         display: none
 
